fix alignment on card elemnt

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -49,12 +49,15 @@
     }
     
     .Social-links {
+            margin: auto; 
             display: flex;
             flex-direction: column;
             width: 85%;
+            align-items: center;
         }
 
     .Social-links a {
+       
         background-color: hsl(0, 0%, 20%);
         margin-bottom: 10px;
         color: white;
@@ -64,6 +67,7 @@
         padding: 10px;
         text-align: center;
         border-radius: 8px;
+    
     }    
     
     
